log
Fri 30 Jun 2023 01:34:18 AM UTC: 
 tests:  0|6
total_score: 0/70
25fe96b
Fri 30 Jun 2023 01:35:15 AM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
bf0843c
Fri 30 Jun 2023 01:35:30 AM UTC: 
 hashmap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  1|5
total_score: 10/70
276a20d
Fri 30 Jun 2023 01:37:48 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:45: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   50 |         map->buckets[position] = createPair(_strdup(key), value);
      |                                             ^~~~~~~
      |                                             strdup
hashmap.c:50:45: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |         map->buckets[position] = createPair(_strdup(key), value);
      |                                             ^~~~~~~~~~~~
      |                                             |
      |                                             int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’; have ‘char *(const char *)’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:50:45: note: previous implicit declaration of ‘_strdup’ with type ‘int()’
   50 |         map->buckets[position] = createPair(_strdup(key), value);
      |                                             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
45e0059
Fri 30 Jun 2023 01:37:54 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6986f64
Fri 30 Jun 2023 01:38:47 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
3bfc1fd
Fri 30 Jun 2023 01:39:18 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
178225e
Fri 30 Jun 2023 01:40:11 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
34b8a40
Fri 30 Jun 2023 01:45:12 AM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  17|0
total_score: 70/70
a0c0722
Fri 30 Jun 2023 01:45:24 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
33eaf86
